Bug 75347 - xlib.c:35:42: fatal error: state_tracker/xlib_sw_winsys.h: No such file or directory
Summary: xlib.c:35:42: fatal error: state_tracker/xlib_sw_winsys.h: No such file or di...
Status: RESOLVED FIXED
Alias: None
Product: Mesa
Classification: Unclassified
Component: Other (show other bugs)
Version: git
Hardware: x86-64 (AMD64) Linux (All)
: medium blocker
Assignee: mesa-dev
QA Contact:
URL:
Whiteboard:
Keywords: regression
Depends on:
Blocks:
 
Reported: 2014-02-22 03:48 UTC by Vinson Lee
Modified: 2014-02-22 03:57 UTC (History)
2 users (show)

See Also:
i915 platform:
i915 features:


Attachments

Description Vinson Lee 2014-02-22 03:48:23 UTC
mesa: 6171accb02bfebdb73b8341d8bf41be1a7d975b1 (master)

$ scons
[...]
  Compiling src/gallium/targets/libgl-xlib/xlib.c ...
src/gallium/targets/libgl-xlib/xlib.c:35:42: fatal error: state_tracker/xlib_sw_winsys.h: No such file or directory
 #include "state_tracker/xlib_sw_winsys.h"
                                          ^

4f37e52f374b8b1d7177634dc09ab71e30e1779d is the first bad commit
commit 4f37e52f374b8b1d7177634dc09ab71e30e1779d
Author: Emil Velikov <emil.l.velikov@gmail.com>
Date:   Thu Feb 13 15:24:16 2014 +0000

    winsys/xlib: move xlib_create_sw_winsys within the winsys
    
    v2: Rebase on top of vl_winsys_xsp.c removal
    Signed-off-by: Emil Velikov <emil.l.velikov@gmail.com>
    Reviewed-by: Jakob Bornecrantz <jakob@vmware.com> (v1)

:040000 040000 162fa1e2851a902f428c10c8b00041a5d204d8d3 1b61b581cf5990a5c7e7d38e8680c570168a337f M	src
bisect run success
Comment 1 Vinson Lee 2014-02-22 03:57:55 UTC
commit 079773d1cb690d24dff40752e0a1842ba706d656
Author: Vinson Lee <vlee@freedesktop.org>
Date:   Fri Feb 21 19:53:29 2014 -0800

    libgl-xlib: Fix xlib_sw_winsys.h include path.
    
    This patch fixes this SCons build error introduced with commit
    4f37e52f374b8b1d7177634dc09ab71e30e1779d.
    
      Compiling src/gallium/targets/libgl-xlib/xlib.c ...
    src/gallium/targets/libgl-xlib/xlib.c:35:42: fatal error: state_tracker/xlib_sw_winsys.h: No such file or directory
     #include "state_tracker/xlib_sw_winsys.h"
                                              ^
    
    Bugzilla: https://bugs.freedesktop.org/show_bug.cgi?id=75347
    Signed-off-by: Vinson Lee <vlee@freedesktop.org>


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.